# family_tree_stimula

./: .gitignore  conventions.md  pyproject.toml
models/: person.py  relationship.py  storage.py
tasks/: child_tasks.md  context.md
tasks/data_models_and_storage/: child_tasks.md
tasks/data_models_and_storage/initial_data_storage/: child_tasks.md  context.md  task.md
tasks/initial_service_layer/: child_tasks.md
tasks/initial_ui_layer/: child_tasks.md
tasks/initial_ui_layer/cli_unit_tests/: task.md
tasks/project_setup/: child_tasks.md
tasks/project_setup/project_initialization/: child_tasks.md
tests/: test_person.py  test_relationship.py  test_storage.py
